# research_kit

./: .gitignore  DATA_DICTIONARY.md  DOWNLOADS.md  INDEX.md  MANIFEST.md  README.md  RESEARCH_TOPICS.md  manifest.json
data/: data_center_manifest.json  data_center_snapshot.json  mlx_scores_sample.jsonl  sheets_inputs.json
data/frontend_investor/: active_orders.json  clarity_skills_catalog.json  first_access_pack.json  full_market_model.json  full_pretest_report.json  genesis_entropy.json  helix_components_report.json  helix_manifest.json  helix_runtime_table.json  launch_readiness_report.json  listing_compliance_report.json  live_market_sync_manifest.json  live_spot_orders.json  mainnet_contract_gates.json  mainnet_listing_config.json  nano_details_100.json  order_grid.json  platform_integrations.json  platform_integrations_full_status.json  platform_integrations_manifest.json  pretest_manifest.json  quant_skills_manifest.json  quant_skills_table.json  security_layers_report.json  (+4 more)
engine-summaries/: CORTEXPAY.md  HELIX.md  MLX.md  MONETIZATION_CALCULUS.md  QUANT_STACK.md  VIS_INTELLIGENCE.md
simulators/state_space/: Cargo.toml  events_100.json  strategies_config_space.json
simulators/state_space/fixtures/: batch_100.ndjson  batch_100_merkle.txt  batch_100_telemetry.ndjson  batch_100_ticks.json  synthetic_book.json
simulators/state_space/src/: abm.rs  catalog.rs  event_loop.rs  invariants.rs  l1_hooks.rs  lib.rs  main.rs  merkle.rs  regime_manager.rs  state_bus.rs  strategy_generator.rs  telemetry.rs
simulators/state_space/src/chain/: mod.rs
(+67 files in other folders)
