[package]
name = "clrty-state-space-sim"
version.workspace = true
edition.workspace = true
description = "CLRTY 100-event state-space simulation engine"

[[bin]]
name = "clrty-state-space-sim"
path = "src/main.rs"

[dependencies]
clrty-substrate = { path = "../../CLRTY_SUBSTRATE" }
quant_stack = { path = "../../quant_stack" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
redis = { version = "0.27", optional = true }

[features]
default = []
redis-sync = ["redis"]
